<resources>
    <string name="app_name">ElektronikosParduotuve</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Shop</string>
    <string name="Shopping_cart">Cart</string>
    <string name="content_description_media">image</string>
    <string name="title">title</string>
    <string name="secondary_text">secondary</string>
    <string name="more">Plačiau</string>
    <string name="add_to_cart">Į krepšelį</string>
    <string name="cartitems">cartItems</string>
    <string name="action_1">awea</string>
    <string name="action_2">REMOVE</string>
</resources>